--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,10 @@
 .head{
     background-color: red;
 }
+.snake{
+    background-color: purple;
+}
 
 .food{
-    background-color: purple;
+    background-color: yellow;
 }
